--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "ciaran-blog",
-  "author": "Ciaran Mahon",
+  "author": "Ciaran Mahon <ciaranmahon97@gmail.com>",
   "keywords": [
     "gatsby"
   ],
@@ -16,14 +16,49 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "gatsby": "^5.12.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "babel-plugin-styled-components": "^2.0.2",
+    "gatsby": "^4.7.1",
+    "gatsby-background-image": "^1.6.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-feed": "^4.7.0",
+    "gatsby-plugin-google-analytics": "^4.7.0",
+    "gatsby-plugin-preact": "^6.7.0",
+    "gatsby-plugin-react-helmet": "^5.7.0",
+    "gatsby-plugin-sharp": "^4.7.0",
+    "gatsby-plugin-styled-components": "^5.7.0",
+    "gatsby-plugin-typescript": "^4.7.0",
+    "gatsby-remark-images": "^6.7.0",
+    "gatsby-source-filesystem": "^4.7.0",
+    "gatsby-transformer-json": "^4.7.0",
+    "gatsby-transformer-remark": "^5.7.0",
+    "gatsby-transformer-sharp": "^4.7.0",
+    "intersection-observer": "^0.12.0",
+    "preact": "^10.6.5",
+    "preact-render-to-string": "^5.1.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^20.3.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "typescript": "^5.1.6"
+    "@babel/core": "^7.17.2",
+    "@notionhq/client": "^0.4.13",
+    "@types/node": "^17.0.17",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.22",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.9.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prefer-arrow": "^1.1.7",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1",
+    "puppeteer": "^13.3.1",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
